# sourcegraph

./: CHANGELOG.md  go.mod  go.sum  package.json  pnpm-lock.yaml  shell.nix
client/cody-slack/: Dockerfile
client/cody/src/chat/: ChatViewProvider.ts  fastFileFinder.ts
client/web-sveltekit/: Dockerfile
client/web/src/site-admin/: RepositoryNode.tsx
cmd/frontend/graphqlbackend/: BUILD.bazel  graphqlbackend.go  guardrails.go  guardrails.graphql  schema.go  schema.graphql  site.go
cmd/frontend/internal/cli/: BUILD.bazel  autoupgrade.go  serve_cmd.go
cmd/frontend/internal/highlight/: language.go
cmd/frontend/internal/httpapi/: httpapi.go
cmd/gitserver/server/: BUILD.bazel  server.go  server_grpc.go  server_test.go  serverutil.go
cmd/migrator/shared/: BUILD.bazel  main.go
cmd/symbols/: Dockerfile.wolfi
dev/nix/: p4-fusion.nix
doc/admin/how-to/: repo-not-updated.md
docker-images/prometheus/: Dockerfile.wolfi
enterprise/cmd/frontend/: BUILD.bazel
enterprise/cmd/frontend/internal/guardrails/: BUILD.bazel  init.go
enterprise/cmd/frontend/internal/guardrails/resolvers/: BUILD.bazel  resolver.go
enterprise/cmd/frontend/shared/: BUILD.bazel  shared.go
enterprise/internal/embeddings/: schedule.go
internal/database/: BUILD.bazel  external_services.go  mocks_temp.go  repos.go  schema.json  schema.md
internal/gitserver/: client.go  client_test.go
internal/gitserver/v1/: gitserver.proto
internal/oobmigration/: BUILD.bazel  store.go
internal/repos/: BUILD.bazel
internal/singleprogram/: singleprogram.go
internal/types/: types.go
internal/version/upgradestore/: store.go  store_test.go
lib/output/: BUILD.bazel
migrations/: BUILD.bazel
migrations/frontend/: squashed.sql
schema/: schema.go  site.schema.json
(+50 files in other folders)
