load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "frontend_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/enterprise/cmd/frontend",
    visibility = ["//visibility:private"],
    x_defs = {
        "github.com/sourcegraph/sourcegraph/internal/version.version": "{STABLE_VERSION}",
        "github.com/sourcegraph/sourcegraph/internal/version.timestamp": "{VERSION_TIMESTAMP}",
    },
    deps = [
        "//enterprise/cmd/frontend/shared",
        "//internal/conf",
        "//internal/sanitycheck",
        "//internal/service/svcmain",
        "//ui/assets",
        "//ui/assets/enterprise",
        "@com_github_sourcegraph_log//:log",
    ],
)

go_binary(
    name = "frontend",
    embed = [":frontend_lib"],
    visibility = ["//visibility:public"],
)
